# WBLogistic_SealsTeam

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.ml  Makefile  README.md  docker-compose.python-smoke.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml
backend-java/: Dockerfile  build.gradle  settings.gradle
backend-java/gradle/wrapper/: gradle-wrapper.properties
backend-java/src/main/java/com/wb/logistics/: WbLogisticsApplication.java
backend-java/src/main/java/com/wb/logistics/client/: MlServiceClient.java
backend-java/src/main/java/com/wb/logistics/config/: AppProperties.java  CorsConfig.java  HttpLoggingConfig.java  LocalProfile.java
backend-java/src/main/resources/: application-local.yml  application.yml
backend-java/src/main/resources/db/migration/: V1__create_dispatches.sql  V2__create_tactical_plan.sql
config/: settings.yaml
frontend-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend-web/src/: App.jsx  api.js  index.css  main.jsx
src/backend_service/: __init__.py  main.py
src/backend_service/api/: __init__.py  routers.py  schemas.py
src/backend_service/core/: __init__.py  config.py  feature_logger.py
src/backend_service/engine/: __init__.py  auto_dispatcher.py  forecaster_macro.py  forecaster_micro.py
src/ml_pipeline/: metrics.py  predict_submission.py  train_macro.py  train_micro.py
tests/: conftest.py  test_api.py  test_chain_regressor.py  test_decision_engine.py  test_feature_logger.py  test_schemas.py
(+25 files in other folders)
